支持mvn clean package编译